# quasi

./: .gitignore  AGENTS.md  CLAUDE.md  Quasi 当前结构 snapshot — 编辑用.md  README.md  plugin.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: analyse-agent.md  analyze-agent.md  audit-agent.md  citation-agent.md  citecheck-agent.md  debug-userconfig.md  discover-agent.md  download-agent.md  extract-agent.md  local-agent.md  new-discover-agent.md  overview-agent.md  permissions-agent.md  profile-agent.md  proofread-agent.md  scan-agent.md  search-agent.md  setup-agent.md  synthesis-agent.md  translate-agent.md  typecheck-agent.md
core/: __init__.py  core.py
docs/: ADR-002-capability-layering.md  ARCHITECTURE.md  DOUBAN_LOCALISATION_HANDOFF.md  EXPERIENCE-vault-metadata-backfill.md  LAYERS.md  SKILL_ORCHESTRATION.md  process-material-design.md  processing-schema.md
hooks/: hooks.json
schemas/: SPEC.md  __init__.py  author.py  book.py  chapter.py  paper.py  pyproject.toml  registry.py
scripts/: bootstrap-venv.sh  requirements.txt
scripts/schemas/: SPEC.md  __init__.py  author.py  body.py  book.py  chapter.py  image.py  journal.py  note.py  paper.py  primitives.py  pyproject.toml  registry.py  talk.py  topic.py  transcript.py
shared/: output-format.md
tests/: test_audit_cli.py  test_audit_field_distribution.py  test_block_list_yaml.py  test_citation_review_cards.py  test_config_paths.py  test_dead_names.py  test_doctor_cli.py  test_download_book_identity.py  test_download_cli.py  test_extract_cli.py  test_hook_injection.py  (+9 more)
(+132 files in other folders)
