[project]
name = "quasi-schemas"
version = "0.7.0"
description = "Pydantic V2 schemas for the quasi-vault (author / book / chapter / paper / topic / journal / note / image / talk / transcript)"
readme = "SPEC.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pyyaml>=6.0",     # for reading frontmatter in scripts
    "rich>=13",        # for prettier reports
]

[tool.uv]
package = false        # 不发布,只内部使用
